tests/fail/02_item_struct.stderr
error: unexpected end of input, expected identifier
 --> tests/fail/02_item_struct.rs:3:1
  |
3 | #[alias(S1, S2,)]
  | ^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `alias` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0425]: cannot find function, tuple struct or tuple variant `S` in this scope
 --> tests/fail/02_item_struct.rs:7:16
  |
7 |     assert_eq!(S(5).0, 5);
  |                ^ not found in this scope

error[E0425]: cannot find function, tuple struct or tuple variant `S1` in this scope
 --> tests/fail/02_item_struct.rs:8:16
  |
8 |     assert_eq!(S1(5).0, 5);
  |                ^^ not found in this scope

error[E0425]: cannot find function, tuple struct or tuple variant `S2` in this scope
 --> tests/fail/02_item_struct.rs:9:16
  |
9 |     assert_eq!(S2(5).0, 5);
  |                ^^ not found in this scope
